# kst

./: .hgignore  LICENSE  Makefile.am  README  autobuild.sh  configure.ac
cskel/: LICENSE  README  man.n.scd
doc/: Makefile.am  README.kst  srm.1
ke/: Makefile  Makefile.in  TODO  abuf.c  abuf.h  config.sh  defs.h  erow.c  escapes.txt  ke.1  keypress.c  keys.txt  main.c  notes.txt  terminal.c  terminal.h  test.txt  util.c  util.h
kte/: Makefile  config.sh  defs.h  file_buffer.c  input.c  main.c  terminal.c
kte/ark/: defs.h  input.c  main.c  notes.txt  terminal.c
libbase64/: Makefile.in
libdirutils/: Makefile.in  dirutils.c  dirutils_test.c  dirwalk.c
libdirutils/kst/: dirlist.h
libiniparser/: Makefile.in  iniparser.c
src/: Makefile  Makefile.am  dirlist.c  dirutils.c  iniparser_test.c  srm.c
srm/: Makefile.in  config.sh  srm.c
test/: Makefile.am  dirutils_test.c
tests/: Makefile.am  dirlist_test.c  iniparser_test.c
